# jap

./: README.rst  pyproject.toml
docs/: conf.py  index.rst
mod/jap/: __init__.py
tests/: __init__.py
